Refactored the styles for V1

--- a/src/app/components/todo-form/todo-form.component.scss
+++ b/src/app/components/todo-form/todo-form.component.scss
@@ -2,10 +2,19 @@
 
 .todo-form {
     margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
   
     form {
       display: flex;
       flex-direction: column;
+      width: 400px;
+
   
       label {
         margin-bottom: 5px;
