--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,12 +1,23 @@
 <!-- todo-list.component.html -->
+
 <div class="todo-list">
-    <h3>ToDo List</h3>
-    <ul>
-      <li *ngFor="let todo of todos">
-        <span [class.completed]="todo.completed">{{ todo.title }}</span>
-        <button (click)="toggleCompletion(todo)">Toggle Complete</button>
-        <button (click)="deleteTodo(todo.id)">Delete</button>
-      </li>
-    </ul>
+    <div class="title" *ngIf="todos.length">
+        <h3>ToDo List</h3>
+    </div>
+
+    <div class="list">
+        <ul>
+            <li *ngFor="let todo of todos.reverse(); let i = index">
+              <span class="id">{{ i + 1 }}</span>
+              <span class="title" [class.completed]="todo.completed">{{ todo.title }}</span>
+              <button class="status btn btn-primary" [ngStyle]="{'background-color' : todo.completed ? 'red':'green'}" (click)="toggleCompletion(todo)">
+                  {{ todo.completed ? 'Mark as Incomplete' : 'Mark as Complete' }}
+                </button>
+              <button class="delete" (click)="deleteTodo(todo.id)">Delete</button>
+            </li>
+          </ul>
+    </div>
+
+  
   </div>
   
