--- a/src/app/components/todo-list/todo-list.component.scss
+++ b/src/app/components/todo-list/todo-list.component.scss
@@ -1,52 +1,75 @@
 // todo-list.component.scss
 
 .todo-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  .list {
+    width: 50%;
+    justify-content: space-between;
     ul {
       list-style-type: none;
       padding: 0;
-    }
-  
-    li {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 8px;
-      border-bottom: 1px solid #ccc;
-  
-      &:last-child {
-        border-bottom: none;
-      }
-  
-      span {
-        &.completed {
-          text-decoration: line-through;
-          color: gray;
+      li {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 8px;
+        border-bottom: 1px solid #ccc;
+
+        .id {
+          width: 10%;
         }
-      }
-  
-      button {
-        padding: 5px 10px;
-        font-size: 14px;
-        cursor: pointer;
-        margin-left: 5px;
-        background-color: #f44336;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        transition: background-color 0.3s;
-  
-        &:hover {
-          background-color: #d32f2f;
+
+        .title {
+          width: 30%;
         }
-  
-        &:first-child {
-          background-color: #008CBA;
-  
+        .status {
+          width: 30%;
+        }
+
+        .delete {
+          width: 30%;
+        }
+
+        &:last-child {
+          border-bottom: none;
+        }
+
+        span {
+          &.completed {
+            text-decoration: line-through;
+            color: gray;
+          }
+        }
+
+        button {
+          padding: 5px 10px;
+          font-size: 14px;
+          cursor: pointer;
+          margin-left: 5px;
+          background-color: #f44336;
+          color: white;
+          border: none;
+          border-radius: 4px;
+          transition: background-color 0.3s;
+
           &:hover {
-            background-color: #007bb5;
+            background-color: #d32f2f;
+          }
+
+          &:first-child {
+            background-color: #008cba;
+
+            &:hover {
+              background-color: #007bb5;
+            }
           }
         }
       }
     }
   }
-  
+}
