Added Welcome screen and basic Routing

--- a/src/app/components/todo-form/todo-form.component.scss
+++ b/src/app/components/todo-form/todo-form.component.scss
@@ -1,5 +1,12 @@
 // todo-form.component.scss
 
+*{
+  
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700; 
+
+}
+
 .todo-form {
     margin-bottom: 20px;
     margin-top: 20px;
