--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-todo-form></app-todo-form>
-<app-todo-list></app-todo-list>
+<div>
+    <router-outlet></router-outlet> <!-- This will load the component based on the route -->
+  </div>
