--- a/src/app/components/todo-main/todo-main.component.html
+++ b/src/app/components/todo-main/todo-main.component.html
@@ -1,6 +1,8 @@
-
-
-<div class="div">
-    <app-todo-form></app-todo-form>
-    <app-todo-list></app-todo-list>
+<div class="main">
+    <div class="form">
+        <app-todo-form></app-todo-form>
+    </div>
+    <div class="list">
+        <app-todo-list></app-todo-list>
+    </div>
 </div>
