--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,15 +1,19 @@
 <div class="main">
-    <div class="title">
-        <p>
-            To-Do List
-        </p>
+    <div class="subMain">
+        <div class="title">
+            <p>
+                To-Do List
+            </p>
+        </div>
+    
         <div class="desc">
-<p>
-    This is a productive tool, designed to help you better manage your tasks !!
-</p>
+            <p>
+                This is a productive tool, designed to help you better manage your tasks !!
+            </p>
+                    </div>
+        <div class="startButton">
+            <button type="button" class="btn btn-primary" (click)="getStarted()"><span>Let's Get Started.. </span></button>
         </div>
     </div>
-    <div class="startButton">
-        <button type="button" class="btn btn-primary" (click)="getStarted()"><p>Let's Get Started</p></button>
-    </div>
 </div>
+
