--- a/src/app/components/todo-form/todo-form.component.scss
+++ b/src/app/components/todo-form/todo-form.component.scss
@@ -9,7 +9,6 @@
 
 .todo-form {
     margin-bottom: 20px;
-    margin-top: 20px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -21,6 +20,10 @@
       display: flex;
       flex-direction: column;
       width: 400px;
+      input {
+        border: none;
+        border-radius: 15px;
+      }
 
   
       label {
