--- a/src/app/components/todo-form/todo-form.component.scss
+++ b/src/app/components/todo-form/todo-form.component.scss
@@ -15,6 +15,18 @@
     align-items: center;
     justify-content: center;
 
+    h3{
+      font-size: 30px;
+      font-weight: 800;
+      line-height: 28px;
+      font-family: cursive;
+      letter-spacing: .009375em;
+      margin: 0 0 16px;
+    }
+
+   
+  
+
   
     form {
       display: flex;
