--- a/src/app/components/todo-main/todo-main.component.scss
+++ b/src/app/components/todo-main/todo-main.component.scss
@@ -1,6 +1,50 @@
 @import "/src/assets/styles/colors.scss";
-.main{
-    background: $background-color;
-    width: 100vw;
-    height: 100vh;
+.main {
+  background: $background-color;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+
+  .subMain {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 20px;
+    background: #eafbf5;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+      rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+      rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    width: 80%;
+    height: 100%;
+    .list {
+        overflow-y: auto;  /* Enables vertical scrolling when content exceeds height */
+        overflow-x: hidden;
+    }
+
+    .list::-webkit-scrollbar {
+        width: 8px;  /* Reduced width of vertical scrollbar */
+        height: 6px; /* Reduced height of horizontal scrollbar */
+      }
+      /* Customize the scrollbar track */
+.list::-webkit-scrollbar-track {
+    background-color: #d5d3d3; /* Light background */
+  }
+  
+  /* Customize the scrollbar thumb (the draggable part) */
+  .list::-webkit-scrollbar-thumb {
+    background-color: #b5b3b3;  /* Set color */
+    border-radius: 10px;      /* Rounded corners for the thumb */
+  }
+  
+  /* Change the thumb color on hover */
+  .list::-webkit-scrollbar-thumb:hover {
+    background-color: #888787;  /* Darker shade when hovered */
+  }
+  }
 }
