--- a/src/app/components/welcome/welcome.component.scss
+++ b/src/app/components/welcome/welcome.component.scss
@@ -23,6 +23,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      padding: 10px;
       p {
         font-family: cursive;
         font-weight: 900;
@@ -34,8 +35,10 @@
       font-family: cursive;
       font-weight: 400;
       font-size: 20px;
+      padding: 10px;
     }
     .startButton {
+        padding: 10px;
       button {
         background: $primary-color;
         border: none;
